# neo4j-mcp

./: CLAUDE.md  LICENSE  README.md  REVIEW.md  agent.py  pyproject.toml  requirements.txt  run_tests.py  server.py  setup.py
neo4j_mcp/: __init__.py  server.py
neo4j_mcp/database/: __init__.py  operations.py
neo4j_mcp/operations/: __init__.py  entity_operations.py  observation_operations.py  relationship_operations.py  search_operations.py
neo4j_mcp/tools/: tool_definitions.py
neo4j_mcp/utils/: validators.py
operations/: entity_operations.py  observation_operations.py
tests/: __init__.py  test_database_operations.py  test_entity_operations.py  test_observation_operations.py  test_relationship_operations.py  test_search_operations.py  test_server.py  test_tools.py  test_utils.py
tools/: __init__.py
utils/: __init__.py
