[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-mcp"
version = "0.1.0"
description = "Neo4j MCP Server - A Model Context Protocol server for Neo4j database operations"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "dleblancjr", email = "dleblancjr@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Pin to major version 1 for mcp until v2
    "mcp>=1.12.4,<2.0.0",
    # Pin to major version 5 for neo4j driver until v6
    "neo4j>=5.28.2,<6.0.0",
    # Needed at build/runtime for setup.py and server env loading
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
neo4j-mcp = "neo4j_mcp.server:main"
